# game-engine-rs

./: Cargo.toml  assets  build_for_windows.sh  build_with_assets.sh  create_symlinks.sh  notice.toml  profile.json  run_with_mangohud.sh  run_with_mangohud_debug.sh
docs/: gltf.md
src/: framework.rs  game.rs  main.rs  math_utils.rs  object.rs  system.rs
src/assets/: asset.rs  collider_shader.frag  collider_shader.vert  collider_wireframe_shader.frag  mesh_asset.rs  mod.rs  model_asset.rs  ray_shader.frag  ray_shader.vert  shader_asset.rs  sound_asset.rs  texture_asset.rs
src/components/: camera_position.rs  component.rs  mesh.rs  mod.rs  object.rs  sound_emitter.rs  transform.rs
src/game/: game_main.rs  mod.rs
src/managers/: assets.rs  debugger.rs  input.rs  mod.rs  navigation.rs  networking.rs  object_render.rs  physics.rs  render.rs  saves.rs  scene.rs  sound.rs  systems.rs  ui.rs
src/managers/scripting/: dyon.rs  mod.rs  wren.rs
src/managers/scripting/lua/: lua_functions.rs  mod.rs
src/objects/: camera_position.rs  character_controller.rs  empty_object.rs  instanced_model_object.rs  instanced_model_transform_holder.rs  master_instanced_model_object.rs  master_instanced_model_onbject.rs  mod.rs  model_object.rs  nav_object.rs  nav_obstacle.rs  navmesh.rs  particle_system.rs  point_light.rs  ray.rs  sound_emitter.rs  trigger.rs
src/systems/: main_system.rs  mod.rs  player_manager.rs  test_system.rs  world_generator.rs
src/ui/: mod.rs
