[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
image = "0.24.6"
gltf = { version = "1.2.0", features = ["extras", "names"] }
data-url = "0.1.1"
splines = "4.2.0"
glam = { version = "0.25", features = ["serde"] }
serde_bare = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
ez_al = "0.3.1"
mlua = { version = "0.9.9", features = ["luajit", "vendored"] }
once_cell = "1.18.0"
renet = "0.0.13"
machineid-rs = "1.2.4"
rapier3d = "0.18.0"
nalgebra = { version = "0.32.4", features = ["convert-glam025"] }
chron = "0.1.3"
bitmask-enum = "2.2.3"
downcast-rs = "1.2.0"
grid_pathfinding = "0.1.1"
grid_util = "=0.1.1"
rand = "0.8.5"
toml = "0.8.13"
serde_json = "1.0.117"
clap = { version = "4.5.6", features = ["derive"] }
glutin = { version = "0.31.0" }
winit = { version = "=0.29.10", features = ["serde"] }
glutin-winit = "0.4.0"
raw-window-handle = "0.5"
#egui_glium = "0.26.3"
egui_glium = { git = "https://github.com/skillissuedev/egui_glium" }
glium = "0.34.0"

[profile.dev.package.rapier3d]
opt-level = 3

[profile.dev.package.glium]
opt-level = 3

[profile.dev.package.glutin]
opt-level = 3

[profile.dev.package.winit]
opt-level = 3

[profile.dev.package.egui_glium]
opt-level = 3

[profile.dev]
opt-level = 2

#[profile.release]
#codegen-units = 1

